Dernière modification des objectifs spécifiques

--- a/index.html
+++ b/index.html
@@ -249,23 +249,21 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="img/about/8.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4></h4>
-                  <h4 class="subheading">Pérenniser la collaboration entre différents acteurs</h4>
+                  <h4 class="subheading">Susciter la création d'une communauté visible</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Dans le but developper les secteurs privés et publics, IndabaX Burkin va faciliter les offres de services entre milieu universitaire,les entreprises, le marché et le le gouvernement. </p>
+                  <p class="text-muted">Dans le but developper les secteurs privés et publics, IndabaX Burkina veut susciter la création d'une communauté visible autour de la thématique au Burkina mais aussi initier, de manière collaborative, la collecte de données et l’établissement de basesde données consolidées dans des thématiques sociétales </p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>Deeplearning
-                  <br>en marche 
-                  <br>au Burkina!</h4>
+                <h4>Pérenniser la collaboration entre différents acteurs</h4>
               </div>
             </li>
           </ul>
